add toggle for cloud status retrieval
