# cert-manager/docs/swagger.json
@@ -244,6 +244,12 @@
                         "description": "jwt token",
                         "name": "Authorization",
                         "in": "header"
+                    },
+                    {
+                        "type": "boolean",
+                        "description": "toggle if cloud status should be retrieved",
+                        "name": "cloud_status",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -666,25 +672,18 @@
         },
         "time.Duration": {
             "type": "integer",
+            "format": "int64",
             "enum": [
-                -9223372036854775808,
-                9223372036854775807,
                 1,
                 1000,
                 1000000,
-                1000000000,
-                60000000000,
-                3600000000000
+                1000000000
             ],
             "x-enum-varnames": [
-                "minDuration",
-                "maxDuration",
                 "Nanosecond",
                 "Microsecond",
                 "Millisecond",
-                "Second",
-                "Minute",
-                "Hour"
+                "Second"
             ]
         }
     }
